<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_background"
    tools:context=".MainActivity">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Doctors"
        android:paddingStart="14dp"
        android:textColor="@color/black"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingVertical="19dp"
        android:paddingStart="14dp"
        android:background="@color/main_page_button"
        android:text="@string/dr_novikov"
        android:textAlignment="viewStart" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingVertical="19dp"
        android:paddingStart="14dp"
        android:background="@color/main_page_button"
        android:text="@string/dr_nurmatov"
        android:textAlignment="viewStart"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingVertical="19dp"
        android:paddingStart="14dp"
        android:background="@color/main_page_button"
        android:text="@string/dr_khalilova"
        android:textAlignment="viewStart"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingVertical="19dp"
        android:paddingStart="14dp"
        android:background="@color/main_page_button"
        android:text="@string/dr_alieva"
        android:textAlignment="viewStart"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingVertical="19dp"
        android:paddingStart="14dp"
        android:background="@color/main_page_button"
        android:text="@string/dr_kolesova"
        android:textAlignment="viewStart"/>

</LinearLayout>